# agentbus

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  god_view_test.md  install.sh  mock_webhook.py  pr12.diff  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: AUTH.md  CLIENT_MATRIX.md  MCP_SCHEMA.md  RELEASE.md  WAKE.md  WALKTHROUGH.md
docs/superpowers/plans/: 2026-07-10-agentbus-headless.md  2026-07-10-agentbus-headless.md.tasks.json  2026-07-10-agentbus-jupyter.md  2026-07-10-agentbus-jupyter.md.tasks.json  2026-07-10-agentbus-ts-sdk.md  2026-07-10-agentbus-ts-sdk.md.tasks.json  2026-07-10-agentbus-windows-locking.md  2026-07-10-agentbus-windows-locking.md.tasks.json  2026-07-11-agentbus-mcpsafe.md  2026-07-11-agentbus-mcpsafe.md.tasks.json  2026-07-11-agentbus-strangler-bus-go.md  2026-07-11-agentbus-strangler-bus-go.md.tasks.json
examples/: 01_core_pub_sub.py  02_hitl_intercepts.py  03_swarm_rbac.py  04_sla_timeouts.py  05_observability.py  06_distributed_context.py  07_pydantic_schemas.py  08_god_view.py  ci-build-alert.schema.json  mcp-claude-desktop.json  mcp-cursor.json  mcp-hermes.json  roles.yaml  runner.agy.yaml  runner.aider.yaml  runner.factory.yaml  runner.grok.yaml  runner.hermes.yaml  swarm.yaml
go-core/: Makefile  README.md  go.mod
go-core/cmd/agentbus-go-serve/: main.go
go-core/cmd/agentbus-go-worker/: main.go
go-core/internal/store/: store.go  store_test.go
go-core/internal/worker/: config.go  cursor.go  dispatch.go  filter.go  filter_test.go  lease.go  service.go
go-core/internal/workspace/: guard.go  guard_test.go
scripts/: bus_listen_agy.py  dispatch_factory_qa.py  drain_wake_queue.sh  embed_go_binaries.sh  grok_wake_notify.sh  mcp-serve.sh  retag_wheel.py  slack_bridge.py  verify_routing.py  wake_notify.sh
src/agentbus/: __init__.py  artifacts.py  auth.py  bin_resolve.py  cli.py  config_validate.py  devex.py  intercepts.py  leases.py  mcpsafe.py  metrics.py  project_log.py  rbac.py  resilience.py  retry.py  schema_registry.py  schemas.py  sdk.py  server.py  store.py  swarm.py  tail.py  tracing.py  tui.py  wake_ingress.py  watch.py  wiretap.py  workspace_config.py  workspace_guard.py
src/agentbus/jupyter/: __init__.py  client.py  magic.py
src/agentbus/runner/: __init__.py  budget.py  config.py  intake.py  loop.py  types.py  wait_store.py  wait_tick.py
src/agentbus/runner/adapters/: __init__.py  agy.py  aider.py  base.py  echo.py  factory.py  grok.py  hermes.py  prompt_common.py
tests/: factory_validate.py  test_agentswarm_messages.py  test_artifacts.py  test_async_suspend.py  test_auth.py  test_bin_resolve.py  test_busy_wait_breaker.py  test_cli.py  test_cli_lock.py  test_config_validate.py  test_devex.py  test_examples.py  test_examples_ingress_pairing.py  test_factory_mcp_validation.py  test_god_view.py  test_hitl.py  test_leases.py  test_mcp_stdio.py  test_mcpsafe.py  test_metrics.py  test_power_ranking_fixes.py  test_project_log.py  test_rbac.py  test_resilience.py  test_retention.py  test_retry.py  test_runner.py  test_runner_aider.py  test_runner_factory.py  test_runner_hermes.py  test_runner_sdk_wrappers.py  test_schema_registry.py  test_schemas.py  test_sla.py  test_slack_bridge.py  test_store.py  test_store_windows.py  test_swarm.py  test_trace.py  test_tui.py  (+3 more)
tests/jupyter/: test_client.py  test_magic.py
