[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-agentbus"
version = "0.13.0"
description = "SQLite-backed MCP event bus and control surface for heterogeneous agent orchestration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "onicarps" }]
keywords = ["mcp", "agents", "multi-agent", "event-log", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ipython>=8.0"]
devex = ["rich>=13.0", "textual>=0.80"]
sdk = ["pydantic>=2.0"]
obs = ["watchdog>=4.0", "psutil>=5.9"]
jupyter = ["ipython>=8.0"]

[project.urls]
Homepage = "https://github.com/onicarps/agentbus"
Repository = "https://github.com/onicarps/agentbus"
Issues = "https://github.com/onicarps/agentbus/issues"
Documentation = "https://github.com/onicarps/agentbus/blob/main/docs/MCP_SCHEMA.md"

[project.scripts]
agentbus = "agentbus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbus"]
# Binaries are gitignored (large); CI injects them — must not respect VCS ignore for wheel content.
ignore-vcs = true
# Platform wheels: CI places Go binaries under src/agentbus/bin/<plat>/ before build.

[tool.hatch.build.targets.sdist]
only-include = [
    "src/agentbus",
    "go-core",
    "tests",
    "docs",
    "examples",
    "scripts",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "ROADMAP.md",
    "pyproject.toml",
]
# sdist is source-only (go-core included for rebuilds; no platform binaries committed).

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: MCP integration validation (slower, optional in CI)",
]